--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             </div>
         </nav>
     </header>
+    
     <div class="main-banner" id="main-banner">
         <div class="imgbanbtn imgbanbtn-prev" id="imgbanbtn-prev"></div>
         <div class="imgban" id="imgban3">
@@ -41,13 +42,16 @@
                 <h2>Bringing technology, <br> fitness and health all <br> together.</h2>
                 <p></p>
                 <div class="button-slides">
-                <a class="btn btn-full js--scroll-to-connected" href="#">Connected</a>
-                <a class="btn btn-ghost js--scroll-to-start" href="#">Show me more</a>
+                <a class="btn btn-full js--scroll-to-connected" href="#">Get started</a>
+                <a class="btn btn-ghost js--scroll-to-start" href="#">Read more</a>
                 </div>
             </div>
         </div>
         <div class="imgban" id="imgban1">
-                <video autoplay muted loop src="img/skateboarder.mp4"></video>
+                <video  autoplay muted loop>
+                    <source src="img/Travaho.mp4" type="video/mp4"> 
+                        <source src="img/Travaho.mp4" type="video/mp4"> 
+                </video>
             <div class="imgban-box">
                 <h2>Connected Senses 1</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate odit ipsum quis aliquid</p>
@@ -77,7 +81,10 @@
                 </div>
                 <div class="col span-1-of-4">
                         <div class="mobile-img">
-                        <img src="img/mockup_4.png" alt="">
+                        <!-- <img src="img/mockup_4.png" alt=""> -->
+                        <video  autoplay muted loop>
+                            <source src="img/Poolgames.mp4" type="video/mp4"> 
+                        </video>
                      </div>
                 </div>     
             </div>
@@ -86,7 +93,7 @@
     <section class="section-2 js--section-2" id="coming">
         <blockquote>
             <h1 class="h-section-2">COMING SOON</h1>
-            <h1 class="h1-section-2">CS | STRENGTH</h1>
+            <h1 class="h1-section-2">CS | <span class="strenght">STRENGTH</span></h1>
             <p class="p-section-2">Measuring and performing static training just got smarter</p>
             <p class="p1-section-2">CS / STRENGTH aims to help personal trainers, physiotherapists and <br> sports scientists to spot muscle injuries and rehabilitate faster. <br> Connected Senses will be powered by our open platform and app.</p>
         </blockquote>
@@ -133,16 +140,27 @@
             </div>
     </section>
 
-    <section class="section-3 js--section-3" id="contact">
+    <!-- <section class="section-3 js--section-3" id="contact">
 		<div class="section-3-flex">
 			<div>
                 We are working really hard to make fitness more fun and informative at the same time. We teamed up with sport scientists from Stockholm to know that we are doing things right. We are really proud about what we have accomplished together.
 			</div>
 		</div>
-  </section>
+  </section> -->
 
+  <section class="section-3">
+      <div class="row">
+          <div class="col span-1-of-2">
+              <h1 class="h-section-3"> We are working really hard to make fitness more fun and informative at the same time. We teamed up with sport scientists from Stockholm to know that we are doing things right. We are really proud about what we have accomplished together.</h1>
+              <p class="p-section-3">Here are some of our collaborations:</p>
+          </div>
+          <div class="col span-1-of-2">
+            <img class="img-section-3" src="img/exercise_icons.png" alt="">
+        </div>
+      </div>
+  </section>
    <!--FOOTER-->
-   <footer>
+   <!-- <footer>
         <div class="row">
             <div class="span-1-of-2">
         <div>
@@ -178,8 +196,49 @@
                 Copyright &copy; 2018 by Connected Senses. All rights reseved.
             </p>
         </div>
-    </footer>
+    </footer> -->
 
+   <!--FOOTER-->
+   <footer>
+        <div class="row">
+            <div class="span-1-of-2">
+            <div class="footer-logo">
+                <img src="img/cs_logo.png" alt="">
+            </div>
+        <div>
+            <label class="footer-1">
+                <span class="span-footer">Address</span>
+            <p class="footer-p">Götgatan 23 <br> 116 46 Stockholm</p>
+          </label>
+          </div>
+          <div>
+            <label class="footer-1 ">
+                <span class="span-footer">Phone</span>
+            <p class="footer-p">+46-(0)76 435 41 66</p>
+          </label>
+          </div>
+          <div>
+            <label class="footer-1">
+                <span class="span-footer">Email</span>
+            <p class="footer-p">info@connected-senses.com</p>
+          </label>
+          </div>
+            </div>
+            <div class="col span-1-of-2">
+                <ul class="social-links">
+                    <li><a href="#"><i class="ion-social-youtube"></i></a></li>
+                    <li><a href="#"><i class="ion-social-twitter"></i></a></li>
+                    <li><a href="#"><i class="ion-social-linkedin"></i></a></li>
+                    <br>
+                    <span class="social-span">
+                    <li><a href="#"><i class="ion-social-facebook"></i></a></li>
+                    <li><a href="#"><i class="ion-social-instagram"></i></a></li>
+                    <li><a href="#"><i class="ion-social-vimeo"></i></a></li>
+                    </span>
+                </ul>
+            </div>
+        </div>
+    </footer>
 
 
 
