fixed footer img

--- a/index.html
+++ b/index.html
@@ -157,15 +157,16 @@
           </label>
           </div>
             </div>
-            <div class="col span-1-of-2">
+            <div class="col span-1-of-2 img-img">
+                <img src="img/pattern.png" alt="">
                 <ul class="social-links">
                     <li><a href="#"><i class="ion-social-youtube"></i></a></li>
                     <li><a href="#"><i class="ion-social-twitter"></i></a></li>
-                    <li><a href="#"><i class="ion-social-linkedin"></i></a></li>
+                    <li><a href="https://www.linkedin.com/company/connected-senses/"><i class="ion-social-linkedin"></i></a></li>
                     <br>
                     <span class="social-span">
-                    <li><a href="#"><i class="ion-social-facebook"></i></a></li>
-                    <li><a href="#"><i class="ion-social-instagram"></i></a></li>
+                    <li><a href="https://www.facebook.com/ConnectedSensesStockholm/"><i class="ion-social-facebook"></i></a></li>
+                    <li><a href="https://www.instagram.com/connectedsthlm/"><i class="ion-social-instagram"></i></a></li>
                     <li><a href="#"><i class="ion-social-vimeo"></i></a></li>
                     </span>
                 </ul>
