--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
     </div>
 
     <section class="section-1 js--section-1" id="about">
-        <h1 class="h-section-1">Connected Senses is a smart fitness and health equipment manufacturer.</h1>
-        <p class="p-section-1">Our products help people find their way back from injuries as well as helping to achieve fitness goals more effectively and precisely. We create state of the art measuring instruments powered by our open platform/app where you can track and visualize your progress.</p>
+        <h1 class="h-section-1">Connected Senses is a smart fitness <br> and health equipment manufacturer.</h1>
+        <p class="p-section-1">Our products help people find their way back from injuries as well as helping to achieve <br> fitness goals more effectively and precisely. We create state of the <br> art measuring instruments powered by our open <br> platform/app where you can track and visualize your progress.</p>
         <div class="row"> 
             <div class="flex-container">
                 <div class="img-section-1" style="flex-grow: 1">
