--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div class="img-section-1" style="flex-grow: 1">
                     <img src="img/mockup_1.png" alt="">
                 </div>
-                <div class="img-section-2" style="flex-grow: 8">
+                <div class="video-section-1" style="flex-grow: 8">
                     <video autoplay muted loop>
                         <source src="img/Travaho.mp4" type="video/mp4"> 
                     </video>
