--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     </header>
     
     <div class="main-banner" id="main-banner">
+        <a class="email-side" href="mailto:info@connected-senses.com">info@connected-senses.com</a>
         <div class="imgbanbtn imgbanbtn-prev" id="imgbanbtn-prev"></div>
             <div class="imgban" id="imgban3">
                 <!-- <img src="img/swimmer.jpg" alt=""> -->
