--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
     </header>
     <div class="main-banner" id="main-banner">
         <a class="email-side" href="mailto:info@connected-senses.com">info@connected-senses.com</a>
+
+        <div class="social-header">
+            <ul class="social-links-1">
+                <li><a href="https://www.linkedin.com/company/connected-senses/"><i class="ion-social-linkedin"></i></a></li>
+                <li><a href="https://www.youtube.com/channel/UCfVK0nQubaGBKqb5Ljx31tw/"><i class="ion-social-youtube"></i></a></li>
+                <li><a href="https://www.instagram.com/connectedsthlm/"><i class="ion-social-instagram"></i></a></li>
+            </ul>
+        </div>
         <div class="imgbanbtn imgbanbtn-prev" id="imgbanbtn-prev"></div>
             <div class="imgban" id="imgban3">
                 <!-- <img src="img/swimmer.jpg" alt=""> -->
@@ -132,7 +140,7 @@
         </div>
       </div>
   </section>
-   <footer>
+   <footer class="js--footer">
         <div class="row">
             <div class="span-1-of-2">
             <div class="footer-logo">
@@ -197,6 +205,6 @@
 <!-- Finished -->
 <!--------------------------------->
 <!--------------------------------->
-<!-- Codes by Rooheed Gulistani -->
+<!-- Code by Rooheed Gulistani -->
 <!-- rooheed.gulistani@gmail.com -->
 <!--------------------------------->
