--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
     <link rel="stylesheet" type="text/css" href="css/queries.css">
     <link rel="stylesheet" type="text/css" href="css/ionicons.min.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700" rel="stylesheet">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
     <title>Connected Senses</title>
 </head>
 <body>
     <header>
         <nav>
             <div class="row">
-                <img src="img/cs_logo.png" alt="Connected logo" class="logo">
-                <img src="img/cs_logo.png" alt="Connected logo" class="logo-black">
+                <a href="index.html"><img src="img/cs_logo.png" alt="Connected logo" class="logo"></a>
+                <a href="index.html"><img src="img/cs_logo.png" alt="Connected logo" class="logo-black"></a>
                 <ul class="main-nav js--main-nav">
                     <li class="js--scroll-about navigation-item"><a href="#about">about us</a></li>
                     <li class="js--scroll-coming navigation-item"><a href="#coming">coming soon</a></li>
@@ -144,7 +145,7 @@
         <div class="row">
             <div class="span-1-of-2">
             <div class="footer-logo">
-                <img src="img/cs_logo.png" alt="">
+                <a href="index.html"><img src="img/cs_logo.png" alt="Logo/footer"></a>
             </div>
         <div>
             <label class="footer-1">
@@ -155,13 +156,13 @@
           <div>
             <label class="footer-1 ">
                 <span class="span-footer">Phone</span>
-            <p class="footer-p">+46-(0)76 435 41 66</p>
+            <a href="tel:0046764354166"><p class="footer-p">+46-(0)76 435 41 66</p></a>
           </label>
           </div>
           <div>
             <label class="footer-1">
                 <span class="span-footer">Email</span>
-            <p class="footer-p">info@connected-senses.com</p>
+            <a href="mailto:info@connected-senses.com"><p class="footer-p">info@connected-senses.com</p></a>
           </label>
           </div>
             </div>
